# frigate-monitoring

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  checkpy  config.example.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: alert_only.yaml  all_fields.py  callback_ntfy.py  callback_pushover.py  debug_print.py  pushover.yaml  rich_display.yaml  slack.yaml  webhook_ntfy.yaml
src/frigate_monitoring/: __init__.py  __main__.py  config.py  enabled.py  event.py  filter.py  listener.py  loader.py  recorder.py  review.py  tracker.py  types.py  urls.py
src/frigate_monitoring/actions/: __init__.py  base.py  callback.py  log_action.py  print_action.py  pushover.py  rich_action.py  slack.py  webhook.py
tests/: conftest.py  test_enabled.py  test_filter.py  test_loader.py  test_recorder.py  test_review.py  test_tracker.py  test_webhook.py
